--- a/sonar-conf/sonar.properties
+++ b/sonar-conf/sonar.properties
@@ -32,7 +32,7 @@ sonar.jdbc.password=sonar
 
 #----- PostgreSQL 9.3 or greater
 # By default the schema named "public" is used. It can be overridden with the parameter "currentSchema".
-sonar.jdbc.url=jdbc:postgresql://db:5432/sonar
+sonar.jdbc.url=jdbc:postgresql://db/sonar
 
 
 #----- Microsoft SQLServer 2014/2016/2017 and SQL Azure
@@ -270,12 +270,12 @@ sonar.jdbc.url=jdbc:postgresql://db:5432/sonar
 
 # Elasticsearch port. Default is 9001. Use 0 to get a free port.
 # As a security precaution, should be blocked by a firewall and not exposed to the Internet.
-#sonar.search.port=9001
+sonar.search.port=9200  #WIP
 
 # Elasticsearch host. The search server will bind this address and the search client will connect to it.
 # Default is loopback address.
 # As a security precaution, should NOT be set to a publicly available address.
-#sonar.search.host=
+sonar.search.host=elasticsearch #WIP
 
 
 #--------------------------------------------------------------------------------------------------
